# omnigraph

./: AGENTS.md  Cargo.toml  README.md  openapi.json
crates/omnigraph/: Cargo.toml
crates/omnigraph-cli/: Cargo.toml
crates/omnigraph-cli/src/: main.rs
crates/omnigraph-compiler/: Cargo.toml
crates/omnigraph-server/: Cargo.toml
crates/omnigraph-server/examples/: bench_actor_isolation.rs  bench_concurrent_http.rs
crates/omnigraph-server/src/: api.rs  lib.rs  policy.rs  workload.rs
crates/omnigraph-server/tests/: openapi.rs  server.rs
crates/omnigraph/src/: storage.rs  table_store.rs
crates/omnigraph/src/db/: manifest.rs  mod.rs  omnigraph.rs  recovery_audit.rs  saved_queries.rs  schema_state.rs  write_queue.rs
crates/omnigraph/src/db/manifest/: recovery.rs
crates/omnigraph/src/db/omnigraph/: export.rs  optimize.rs  schema_apply.rs  table_ops.rs
crates/omnigraph/src/exec/: merge.rs  mutation.rs  query.rs  staging.rs
crates/omnigraph/src/loader/: mod.rs
crates/omnigraph/tests/: branching.rs  composite_flow.rs  failpoints.rs  forbidden_apis.rs  recovery.rs  schema_apply.rs  staged_writes.rs
crates/omnigraph/tests/helpers/: mod.rs  recovery.rs
docs/: architecture.md  branches-commits.md  invariants.md  maintenance.md  runs.md  server.md  storage.md  testing.md  transactions.md
docs/releases/: v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
docs/user/: policy.md  server.md
